Fix dark theme setting legibility
Fix #782. Temporary / imperfect accessibility solution until appv2 comes with v12.

--- a/src/lancer.scss
+++ b/src/lancer.scss
@@ -156,7 +156,7 @@ button {
   font-family: var(--main-font-family);
 }
 
-.window-app.lancer .window-content {
+.window-app.lancer .window-content .form-notes {
   background-color: var(--background-color);
   color: var(--dark-text);
 }
